--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,46 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #b91547;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+/* Common */
+h2{
+    color: #fff;
+    padding: 15px 0;
+}
+/* Inizio Header */
+header{
+    text-align: center;
+}
+.container{
+    width: 835px;
+    background-color: #fff;
+    height: 191px;
+    margin: 0 auto;
+    padding: 10px 70px;
+}
+.calcolo{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 65px;
+    padding: 15px 0;
+}
+.box{
+    display: flex;
+    flex-direction: column;
+    color: #b91547;
+}
+label{
+    padding-bottom: 15px;
+}
+
+/* Fine Header */
+
+
+
+/* Inizio Main */
+/* Fine Main */
